# android-nix

./: .clangd  .gitignore  .gitlab-ci.yml  Makefile  README.md  flake.nix  settings.gradle
JNILib/: CMakeLists.txt  build.gradle
JNILib/src/androidTest/: AndroidManifest.xml
JNILib/src/androidTest/java/com/kolibree/: InstrumentedTest.java
JNILib/src/androidTest/java/test/kolibree/com/kolibreejnitest/: ExampleInstrumentedTest.java
JNILib/src/main/: AndroidManifest.xml
JNILib/src/main/cpp/: checkupcomputing.cpp  checkupcomputing.h  checkupcomputing_test.cpp  native-lib.cpp
JNILib/src/main/java/com/kolibree/: Brushing12.java  Brushing16.java  Brushing8.java  BrushingPass12.java  BrushingPass16.java  BrushingPass8.java  CheckupComputer.java  MouthZones12.java  MouthZones16.java  MouthZones8.java
JNILib/src/main/res/values/: strings.xml
JNILib/src/test/java/com/kolibree/: CheckupComputerUnitTest.java
JNILib/src/test/java/test/kolibree/com/kolibreejnitest/: ExampleUnitTest.java
docs/: README.md
gradle/wrapper/: gradle-wrapper.properties
